--- a/Agnecy landing page/index.html
+++ b/Agnecy landing page/index.html
@@ -162,7 +162,7 @@
 
 
 
-
+<!-- 
     <section class="message">
       <div class="container">
         <div class="message_contact">
@@ -195,7 +195,7 @@
           <p>(+88) 017 617 46373</p>
         </div>
       </div>
-    </section>
+    </section> -->
 
     </main>
 
