--- a/constructor_Finished/index.html
+++ b/constructor_Finished/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"> 
+<html lang="en">
 
 <head>
     <meta charset="UTF-8" />
@@ -205,18 +205,32 @@
                                             <span>Ручки</span>
                                         </label>
                                     </div>
+                                    <div class="cntr">
+                                        <label for="cbxTwo" class="label-cbx">
+                                            <input id="cbxTwo" type="checkbox" class="invisible">
+                                            <div class="checkbox">
+                                                <svg width="20px" height="20px" viewBox="0 0 20 20">
+                                                    <path d="M3,1 L17,1 L17,1 C18.1045695,1 19,1.8954305 19,3 L19,17 L19,17 C19,18.1045695 18.1045695,19 17,19 L3,19 L3,19 C1.8954305,19 1,18.1045695 1,17 L1,3 L1,3 C1,1.8954305 1.8954305,1 3,1 Z"></path>
+                                                    <polyline points="4 11 8 15 16 6"></polyline>
+                                                </svg>
+                                            </div>
+                                            <span>Аеро-еффект</span>
+                                        </label>
+                                    </div>
                                 </div>
-                                <div class="cntr">
-                                    <label for="cbxTwo" class="label-cbx">
-                                        <input id="cbxTwo" type="checkbox" class="invisible">
-                                        <div class="checkbox">
-                                            <svg width="20px" height="20px" viewBox="0 0 20 20">
-                                                <path d="M3,1 L17,1 L17,1 C18.1045695,1 19,1.8954305 19,3 L19,17 L19,17 C19,18.1045695 18.1045695,19 17,19 L3,19 L3,19 C1.8954305,19 1,18.1045695 1,17 L1,3 L1,3 C1,1.8954305 1.8954305,1 3,1 Z"></path>
-                                                <polyline points="4 11 8 15 16 6"></polyline>
-                                            </svg>
-                                        </div>
-                                        <span>Аеро-еффект</span>
-                                    </label>
+                                <div id="block2">
+                                    <div class="cntr">
+                                        <label for="cbxThree" class="label-cbx">
+                                            <input id="cbxThree" type="checkbox" class="invisible">
+                                            <div class="checkbox">
+                                                <svg width="20px" height="20px" viewBox="0 0 20 20">
+                                                    <path d="M3,1 L17,1 L17,1 C18.1045695,1 19,1.8954305 19,3 L19,17 L19,17 C19,18.1045695 18.1045695,19 17,19 L3,19 L3,19 C1.8954305,19 1,18.1045695 1,17 L1,3 L1,3 C1,1.8954305 1.8954305,1 3,1 Z"></path>
+                                                    <polyline points="4 11 8 15 16 6"></polyline>
+                                                </svg>
+                                            </div>
+                                            <span>Аеро-еффект</span>
+                                        </label>
+                                    </div>
                                 </div>
                             </div>
                         </div>
