--- a/Consulting Plus/index.html
+++ b/Consulting Plus/index.html
@@ -126,7 +126,7 @@
             <div class="main-heading">
               <div class="animated entranceLeft">
                 <p>
-                  Презентація об'єктів нерухомості від провідної компанії в
+                  Презентація об’єктів нерухомості від провідної компанії в
                   сфері будівництва
                 </p>
                 <hr />
@@ -141,15 +141,15 @@
             <div class="main-info">
               <div class="animated fadeInLeft">
                 <p>
-                  Чекаємо на Вас в місті Полтава, Premiet Hotel Palazzo
+                  Чекаємо на Вас в місті Полтава, Premier Hotel Palazzo
                 </p>
                 <p>
-                  14 березня 2020 року<br />
+                  14 березня 2020 року <br />
                   о 14.00
                 </p>
                 <br />
                 <a href="#presentation-plan" class="button">
-                  <button>Взяти участь у призентації</button>
+                  <button>Взяти участь у презентації</button>
                 </a>
                 <br />
                 <p>
@@ -175,18 +175,18 @@
             </h3>
             <ul>
               <li>
-                Моя компанія надасть Вам необхідну і достовірну інформацію про
-                нерухомість в Турції та на Північному Кіпрі
+                Моя компанія надасть Вам необхідну і перевірену інформацію про
+                нерухомість в Туреччині та на Північному Кіпрі
               </li>
               <li>
-                Ми підберемо апартаменти на будь-який бюджет і будь-який смак.
+                Ми підберемо апартаменти на будь-який бюджет і будь-який смак
               </li>
-              <li>Врахуємо кожне Ваше побажання.</li>
-              <li>Приділимо увагу кожному вашому проханню.</li>
+              <li>Врахуємо кожне Ваше побажання</li>
+              <li>Приділимо увагу кожному вашому проханню</li>
             </ul>
             <p>
               З нами Вам буде безпечно, бо увесь шлях від пошуку апартаментів,
-              рекламного туру та купівлі нерухомості я пройду з Вами. Ваша мрія
+              рекламного туру та купівлі нерухомості я пройду з Вами Ваша мрія
               здійсниться!️
             </p>
           </div>
@@ -209,20 +209,23 @@
               </p>
               <ul>
                 <li>
-                  Все, що Вас цікавить безпосередньо від самих іноземних
-                  партнерів
+                  Все, що Вас цікавить безпосередньо від іноземних партнерів
                 </li>
                 <li>
-                  Розуміння самого процесу пошуку, купівлі і оформлення
+                  Розуміння самого процесу пошуку, купівлі та оформлення
                 </li>
-                <li>Інформацію про регіон Анталія (Турція) і Північний Кіпр</li>
+                <li>
+                  Інформацію про регіон Анталія (Туруччина ) і Північний Кіпр
+                </li>
                 <li>
                   Про вигідні пропозиції під час презентації від партнерів
                 </li>
-                <li>Отримаєте персональну консультацію</li>
+                <li>
+                  Про вигідні пропозиції під час презентації від партнерів
+                </li>
               </ul>
               <a href="#presentation-plan" class="button">
-                <button>Взяти участь у призентації</button>
+                <button>Взяти участь у презентації</button>
               </a>
             </div>
           </div>
@@ -233,7 +236,7 @@
         <div class="container">
           <div class="animated fadeInLeft2">
             <h2>
-              План презентаціі об’єктів нерухомості
+              План презентації об’єктів нерухомості
             </h2>
           </div>
           <hr />
@@ -243,8 +246,8 @@
                 14:00 – Початок
               </span>
               <p>
-                Початок Анонс плану міроприємства. <br />
-                Представлення іноземних партнерів. <br />
+                Анонс плану презентації. <br />
+                Представлення іноземних партнерів <br />
                 Виступ директора ТОВ «Конракт Консалтинг Плюс» Фещенко О.В.
                 <br />
               </p>
@@ -254,16 +257,16 @@
                 14:30 – Виступ
               </span>
               <p>
-                Хакан Окур - директор міжнародної компанії з продажу нерухомості
-                на Кіпрі <br />
-                Катерина Ганенко – агент з нерухомості з Кіпру <br />
-                Презентація об'єктів нерухомості <br />
+                Виступ Хакан Окур – директор міжнародної компанії з продажу
+                нерухомості Кіпрі <br />
+                Катерина Ганенко – агент з нерухомості Кіпру <br />
+                Презентація об’єктів нерухомості <br />
                 Відповідь на запитання <br />
               </p>
             </li>
             <li>
               <span>
-                16:00 - 16:30 - Перерва на каву
+                16:00-16:30 перерва на каву
               </span>
             </li>
             <li>
@@ -271,8 +274,8 @@
                 16:30 – Виступ
               </span>
               <p>
-                Виступ Мехмет Аслан директора агентства з нерухомості в Турції з
-                презентацією об’єктів нерухомості.
+                Мехмет Аслана – директора агентства з нерухомості в Туреччині з
+                презентацією об’єктів нерухомості
               </p>
             </li>
             <li>
@@ -317,7 +320,7 @@
                 type="submit"
                 id="submit-butt"
                 formNumber="1"
-                value="Взяти участь у призентації"
+                value="Взяти участь у презентації"
                 type="submit"
                 name="action"
               />
@@ -334,10 +337,10 @@
                 УНІКАЛЬНА ПРОПОЗИЦІЯ
               </h3>
               <p>
-                Візьміть участь в презентації і отримайте можливість виграти.
+                Візьміть участь в презентації та отримайте можливість виграти
               </p>
               <h2>
-                Оглядовий тур за рахунок компанії
+                ОГЛЯДОВИЙ ТУР ЗА РАХУНОК КОМПАНІЇ
               </h2>
               <p>
                 Виберіть будинок мрії разом з нами
@@ -363,10 +366,10 @@
           </h2>
           <ul>
             <li>Приватні трансфери з / в аеропорт</li>
-            <li>3 ночі / 4 дня в апартаментах класу 5 *</li>
+            <li>3 ночі / 4 дні в апартаментах класу 5 *</li>
             <li>Сніданок і обід включені</li>
             <li>Перегляд нерухомості</li>
-            <li>Екскурсія по місту</li>
+            <li>Екскурсія містом</li>
             <li>Юридичні та фінансові консультації</li>
           </ul>
         </div>
@@ -376,9 +379,9 @@
         <div class="container">
           <div class="animated entranceUp2">
             <h2>
-              Залишилось питання?
+              Залишились питання?
             </h2>
-            <p>Отримайте безкоштовну презентацію</p>
+            <p>Отримай безкоштовну консультацію</p>
             <form action="">
               <input type="text" placeholder="Ім'я" />
               <input type="text" placeholder="Номер телефону" />
@@ -391,22 +394,24 @@
       <section id="presentation-speakers">
         <div class="container">
           <h2>
-            Спікери призентації
+            Спікери презентації
           </h2>
           <div class="speaker-wrapper speaker-wrapper-desktop">
             <div class="speaker-item">
               <img src="assets/images/speaker-one.png" alt="Speaker Mahmed" />
-              <p>Мехмет Аслан – директор агентства з нерухомості в Турції</p>
+              <p>Мехмет Аслан – директор агентства з нерухомості Туреччини</p>
             </div>
             <div class="speaker-item">
-              <img src="assets/images/speaker-two.png" alt="Speaker Katherina" />
-              <p>Катерина Ганенко – агент з нерухомості з Кіпру</p>
+              <img
+                src="assets/images/speaker-two.png"
+                alt="Speaker Katherina"
+              />
+              <p>Катерина Ганенко – агент з нерухомості Кіпру</p>
             </div>
             <div class="speaker-item">
               <img src="assets/images/speaker-three.png" alt="Speaker Hakan" />
               <p>
-                Хакан Окур - директор міжнародної компанії з продажу нерухомості
-                на Кіпрі
+                Хакан Окур - директор міжнародної компанії з продажу нерухомості Кіпру
               </p>
             </div>
           </div>
@@ -414,17 +419,19 @@
           <div class="speaker-wrapper speaker-wrapper-mobile">
             <div class="speaker-item">
               <img src="assets/images/speaker-one.png" alt="Speaker Mahmed" />
-              <p>Мехмет Аслан – директор агентства з нерухомості в Турції</p>
+              <p>Мехмет Аслан – директор агентства з нерухомості Туреччини</p>
             </div>
             <div class="speaker-item">
-              <img src="assets/images/speaker-two.png" alt="Speaker Katherina" />
-              <p>Катерина Ганенко – агент з нерухомості з Кіпру</p>
+              <img
+                src="assets/images/speaker-two.png"
+                alt="Speaker Katherina"
+              />
+              <p>Катерина Ганенко – агент з нерухомості Кіпру</p>
             </div>
             <div class="speaker-item">
               <img src="assets/images/speaker-three.png" alt="Speaker Hakan" />
               <p>
-                Хакан Окур - директор міжнародної компанії з продажу нерухомості
-                на Кіпрі
+                Хакан Окур - директор міжнародної компанії з продажу нерухомості Кіпру
               </p>
             </div>
           </div>
