--- a/Consulting Plus/index.html
+++ b/Consulting Plus/index.html
@@ -141,7 +141,7 @@
             <div class="main-info">
               <div class="animated fadeInLeft">
                 <p>
-                  Чекаємо на Вас в місті Полтава, Premier Hotel Palazzo
+                  Чекаємо Вас в місті Полтава, Premier Hotel Palazzo
                 </p>
                 <p>
                   14 березня 2020 року <br />
@@ -182,11 +182,11 @@
                 Ми підберемо апартаменти на будь-який бюджет і будь-який смак
               </li>
               <li>Врахуємо кожне Ваше побажання</li>
-              <li>Приділимо увагу кожному вашому проханню</li>
+              <li>Звернемо увагу на кожне ваше прохання</li>
             </ul>
             <p>
               З нами Вам буде безпечно, бо увесь шлях від пошуку апартаментів,
-              рекламного туру та купівлі нерухомості я пройду з Вами Ваша мрія
+              рекламного туру та купівлі нерухомості я пройду з Вами. Ваша мрія
               здійсниться!️
             </p>
           </div>
@@ -221,7 +221,7 @@
                   Про вигідні пропозиції під час презентації від партнерів
                 </li>
                 <li>
-                  Про вигідні пропозиції під час презентації від партнерів
+                  Отримаєте персональну консультацію
                 </li>
               </ul>
               <a href="#presentation-plan" class="button">
@@ -243,10 +243,10 @@
           <ul>
             <li>
               <span>
-                14:00 – Початок
+                14:00 — Початок
               </span>
               <p>
-                Анонс плану презентації. <br />
+                Анонс плану презентації <br />
                 Представлення іноземних партнерів <br />
                 Виступ директора ТОВ «Конракт Консалтинг Плюс» Фещенко О.В.
                 <br />
@@ -254,33 +254,33 @@
             </li>
             <li>
               <span>
-                14:30 – Виступ
+                14:30 — Виступ спікерів презентації
               </span>
               <p>
-                Виступ Хакан Окур – директор міжнародної компанії з продажу
-                нерухомості Кіпрі <br />
-                Катерина Ганенко – агент з нерухомості Кіпру <br />
+                Хакана Окура — директора міжнародної компанії з продажу
+                нерухомості Кіпру <br />
+                Катерини Ганенко — агента з нерухомості Кіпру <br />
                 Презентація об’єктів нерухомості <br />
                 Відповідь на запитання <br />
               </p>
             </li>
             <li>
               <span>
-                16:00-16:30 перерва на каву
+                16:00–16:30 — Перерва на каву
               </span>
             </li>
             <li>
               <span>
-                16:30 – Виступ
+                16:30 — Виступ спікера презентації
               </span>
               <p>
-                Мехмет Аслана – директора агентства з нерухомості в Туреччині з
+                Мехмет Аслана — директора агентства з нерухомості в Туреччині з
                 презентацією об’єктів нерухомості
               </p>
             </li>
             <li>
               <span>
-                17:30 – Живе спілкування
+                17:30 — Живе спілкування
               </span>
             </li>
           </ul>
@@ -399,19 +399,19 @@
           <div class="speaker-wrapper speaker-wrapper-desktop">
             <div class="speaker-item">
               <img src="assets/images/speaker-one.png" alt="Speaker Mahmed" />
-              <p>Мехмет Аслан – директор агентства з нерухомості Туреччини</p>
+              <p>Мехмет Аслан — директор агентства з нерухомості Туреччини</p>
             </div>
             <div class="speaker-item">
               <img
                 src="assets/images/speaker-two.png"
                 alt="Speaker Katherina"
               />
-              <p>Катерина Ганенко – агент з нерухомості Кіпру</p>
+              <p>Катерина Ганенко — агент з нерухомості Кіпру</p>
             </div>
             <div class="speaker-item">
               <img src="assets/images/speaker-three.png" alt="Speaker Hakan" />
               <p>
-                Хакан Окур - директор міжнародної компанії з продажу нерухомості Кіпру
+                Хакан Окур — директор міжнародної компанії з продажу нерухомості Кіпру
               </p>
             </div>
           </div>
@@ -419,19 +419,19 @@
           <div class="speaker-wrapper speaker-wrapper-mobile">
             <div class="speaker-item">
               <img src="assets/images/speaker-one.png" alt="Speaker Mahmed" />
-              <p>Мехмет Аслан – директор агентства з нерухомості Туреччини</p>
+              <p>Мехмет Аслан — директор агентства з нерухомості Туреччини</p>
             </div>
             <div class="speaker-item">
               <img
                 src="assets/images/speaker-two.png"
                 alt="Speaker Katherina"
               />
-              <p>Катерина Ганенко – агент з нерухомості Кіпру</p>
+              <p>Катерина Ганенко — агент з нерухомості Кіпру</p>
             </div>
             <div class="speaker-item">
               <img src="assets/images/speaker-three.png" alt="Speaker Hakan" />
               <p>
-                Хакан Окур - директор міжнародної компанії з продажу нерухомості Кіпру
+                Хакан Окур — директор міжнародної компанії з продажу нерухомості Кіпру
               </p>
             </div>
           </div>
