--- a/Consulting Plus/index.html
+++ b/Consulting Plus/index.html
@@ -460,10 +460,10 @@
         </div>
         <div class="footer-social">
           <li>
-            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.instagram.com/consult.apartments/"><i class="fab fa-instagram"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.facebook.com/Consultapartments/"><i class="fab fa-facebook"></i></a>
           </li>
         </div>
       </div>
