--- a/Consulting Plus/index.html
+++ b/Consulting Plus/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="description" content="" />
     <title>Contract Consulting Plus – Житло на березі моря</title>
-    <link rel="shortcut icon" href="/assets/images/favicon.ico" type="image/png">
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/png">
 
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
